2006-02-15  Keith Goodman  <kwgoodman@gmail.com>

	* help.cc (keywords): Doc string fix.

2006-02-15  John W. Eaton  <jwe@octave.org>

	* oct-procbuf.cc (close): Use __CYGWIN__ instead of __CYGWIN32__.

2006-02-13  David Bateman  <dbateman@free.fr>

	* DLD_FUNCTIONS/regexp.cc (octregexp): Add matlab compatiable
	named tokens. Update the tests

2006-02-10  John W. Eaton  <jwe@octave.org>

	* lex.l (\[{S}*): Maybe set lexer_flags.looking_at_return_list or
	lexer_flags.looking_at_matrix_or_assign_lhs here.
	* parse.y 
	(return_list_beg): Don't use in_return_list here.
	(assign_lhs, matrix): Don't use in_matrix_or_assign_lhs here.
	(in_matrix_or_assign_lhs, in_return_list): Delete unused macros.
	(matrix): Clear lexer_flags.looking_at_matrix_or_assign_lhs in all
	cases.

2006-02-09  John W. Eaton  <jwe@octave.org>

	* utils.cc (oct_file_in_path): Check len > 4, not len > 2.
	From Larrie Carr <larrie@telus.net>.

2006-02-09  David Bateman  <dbateman@free.fr>

        * DLD-FUNCTIONS/spqr.cc: New file for sparse QR and dmperm based on
        CSparse.
        * DLD-FUNCTIONS/matrix_type.cc (Fmatrix_type): dintinguish between
        rectangular and singular matrices. Add tests.
        * DLD-FUNCTIONS/luinc.cc: Add tests.
        * DLD-FUNCTIONS/spkron.cc: Ditto.
        * Makefile.in (DLD_XSRC): Add spqr.cc.
        (OCT_LINK_DEPS): Add CSSPARSE_LIBS.
        * sparse-xdiv.h: Remove conditio of lssolve.

2006-02-08  John W. Eaton  <jwe@octave.org>

	* parse.y (frob_function): Clear ID_NAME from top_level symbol
	table if we are defining a function at the top-level and a
	function with the same name is already in the top-level symbol
	table.

2006-01-31  John W. Eaton  <jwe@octave.org>

	* ov-base-sparse.h (octave_base_sparse<T>::nzmax): New function.
	* ov.h (octave_value::nzmax): New function.
	* ov-base.cc (octave_base_value::nzmax): New function.
	* ov-base.h: Provide decl.
	* data.cc (Fnzmax): New function.
	* DLD-FUNCTIONS/sparse.cc (Fnzmax): Delete.
